cmake_minimum_required(VERSION 3.10)
project(class_parser_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(class_parser_cpp main.cpp constant_pool_members/ConstantPoolMember.h constant_pool_members/ConstantPoolLinkMember.cpp constant_pool_members/ConstantPoolLinkMember.h constant_pool_members/ConstantPoolFactory.h constant_pool_members/ConstantPoolNameRef.cpp constant_pool_members/ConstantPoolNameRef.h endian_fix.h endian_fix.cpp constant_pool_members/ConstantPoolUtfString.cpp constant_pool_members/ConstantPoolUtfString.h constant_pool_members/ConstantPoolInteger.cpp constant_pool_members/ConstantPoolInteger.h constant_pool_members/ConstantPoolLong.cpp constant_pool_members/ConstantPoolLong.h constant_pool_members/ConstantPoolFloat.cpp constant_pool_members/ConstantPoolFloat.h constant_pool_members/ConstantPoolDouble.cpp constant_pool_members/ConstantPoolDouble.h constant_pool_members/ConstantPoolMethodHandle.cpp constant_pool_members/ConstantPoolMethodHandle.h)